Created Navigation layout in navigation.less file.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SpaceWalkers</title>
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
@@ -17,7 +17,17 @@
 <body>
 
  <!-- navigation code here -->
-
+  <nav class="navcontainer">
+    <h1>SpaceWalkers</h1>
+    <div class="linkcontainer">
+      <a class="navlink" href="#">Home</a>
+      <a class="navlink" href="#">About Us</a>
+      <a class="navlink" href="#">Blog</a>
+      <a class="navlink" href="#">Contact</a>
+      <a class="navlink" href="#">Sign In</a>
+    </div>
+  </nav>
+  
   <div class="container home">
 
     <header class="intro">
