Added Header Image and updated style in home-page.less

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <a class="navlink" href="#">Sign In</a>
     </div>
   </nav>
-  
+
   <div class="container home">
 
     <header class="intro">
-       <!-- image code here -->
+       <img src="img/main-header.png" class="header-image">
 
       <h2>Lift Off</h2>
     
